added PATCH to policy routes
