# openapi.yml
@@ -2,9 +2,9 @@
 openapi: "3.0.0"
 
 info:
-  title: "Feather FSE Codechallenge Datastore REST API"
+  title: "FSE Code Challenge Datastore REST API"
   version: "1.0.0"
-  description: "Basic endpoints for the Feather FSE Codechallenge"
+  description: "Basic endpoints for the FSE Code Challenge"
 
 tags:
 - name: "Customer"
@@ -63,6 +63,33 @@ paths:
             description: 200 Success
           400: 
             description: 400 Bad request
+      patch:
+        tags:
+        - "Policy"
+        summary: "Patch a policy record"
+        description: "Patch selected fields in a policy record. Example: {id: valid_policy_id, firstName: new_first_name_value}"
+        parameters: []
+        requestBody: 
+          required: true
+          description: "Send payload with fieldName / fieldValue to patch. 'id' is required; this is the policy id. Other vals can be firstName / lastName / policyNumber"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: Int64
+                  fieldName:
+                    type: String
+              example:
+                id: 1
+                firstName: "test firstName 01"
+        responses:
+          200: 
+            description: 200 Success
+          400: 
+            description: 400 Bad request
+
   /api/v1/policy/{id}:
       get:
         tags: 
